Organization People Revamp design  (#1568)
* Create authorized-change.py

* Update authorized-changes-detection.yml

* Update authorized-changes-detection.yml

* Update count_changed_files.py

* Update count_changed_files.py

* Update count_changed_files.py

* Create sensitive_files.txt

* Update pull-requests.yml

* Update pull-requests.yml

* Update pull-requests.yml

* Update pull-requests.yml

* Update pull-requests.yml

* Update pull-requests.yml

* Update pull-requests.yml

* Update count_changed_files.py

* Update count_changed_files.py

* Update count_changed_files.py

* Delete .github/workflows/authorized-changes-detection.yml

* Delete .github/workflows/authorized-change.py

* reviews changes done

* fetch-depth testing

* new ui added

* minor

* ..

* added

* add this

* Update documentation

* Revert "Update documentation"

This reverts commit fb219a7f5af16fe8da62940743c07e68e10507b2.

* Update documentation

* loader and form label added

* Update documentation

* Revert "Update documentation"

This reverts commit c797fd0fc608727b7f51540da1b40d471ea911b6.

* Update documentation

* Revert "Update documentation"

This reverts commit e58d56b1c073a9f00051be40bb74ef1494496dd9.

* Revert "Update documentation"

This reverts commit 163ffacc6f46af18f874e65cc50f787512916143.

* ..

* lints

* fixed test cases

* test cases updated

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -202,7 +202,10 @@
     "searchName": "Entrez le nom",
     "searchevent": "Entrez l'événement",
     "searchFirstName": "Entrez votre prénom",
-    "searchLastName": "Entrer le nom de famille"
+    "searchLastName": "Entrer le nom de famille",
+    "people": "Personnes",
+    "sort": "Trier par rôle",
+    "actions": "Actions"
   },
   "userListCard": {
     "joined": "Inscrit",
