--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -4,7 +4,6 @@
     "fromPalisadoes": "柵欄 基金会志愿者的开源应用程序",
     "talawa_portal": "塔拉瓦管理門戶",
     "login": "登錄",
-    "userLogin": "用户登录",
     "register": "登記",
     "firstName": "名",
     "lastName": "姓",
@@ -37,7 +36,41 @@
     "lowercase_check": "至少一個小寫字母",
     "uppercase_check": "至少有一個大寫字母",
     "numeric_value_check": "至少一個數值",
-    "special_char_check": "至少一個特殊字符"
+    "special_char_check": "至少一個特殊字符",
+    "invalidEmail": "输入无效，请输入有效的电子邮件地址",
+    "noFill": "请填写此字段"
+  },
+  "userLoginPage": {
+    "title": "塔拉瓦管理員",
+    "fromPalisadoes": "柵欄 基金会志愿者的开源应用程序",
+    "talawa_portal": "塔拉瓦管理門戶",
+    "login": "登錄",
+    "register": "登記",
+    "firstName": "名",
+    "lastName": "姓",
+    "email": "電子郵件",
+    "password": "密碼",
+    "atleast_8_char_long": "至少 8 個字符長",
+    "Password_and_Confirm_password_mismatches.": "密碼和確認密碼不匹配。",
+    "confirmPassword": "確認密碼",
+    "forgotPassword": "忘記密碼 ？",
+    "enterEmail": "输入电子邮件",
+    "enterPassword": "输入密码",
+    "doNotOwnAnAccount": "沒有帳戶嗎？",
+    "talawaApiUnavailable": "服務不可用。它正在運行嗎？還要檢查您的網絡連接。",
+    "captchaError": "驗證碼錯誤！",
+    "Please_check_the_captcha": "請檢查驗證碼。",
+    "Something_went_wrong": "出了點問題，請稍後再試。",
+    "passwordMismatches": "密碼和確認密碼不匹配。",
+    "fillCorrectly": "正確填寫所有細節。",
+    "notAuthorised": "抱歉！你沒有被授權！",
+    "notFound": "找不到用戶！",
+    "successfullyRegistered": "註冊成功，請等待審核通過。",
+    "userLogin": "用户登录",
+    "afterRegister": "註冊成功。 請等待管理員批准您的請求。",
+    "OR": "或者",
+    "invalidEmail": "输入无效，请输入有效的电子邮件地址",
+    "noFill": "请填写此字段"
   },
   "latestEvents": {
     "eventCardTitle": "即将举行的活动",
@@ -163,12 +196,7 @@
     "roleUpdated": "角色已更新。",
     "noResultsFoundFor": "未找到结果 ",
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。",
-    "cancel": "取消",
-    "admins": "管理員",
-    "members": "成員",
-    "joinNow": "现在加入",
-    "joined": "加入",
-    "withdraw": "提取"
+    "cancel": "取消"
   },
   "dashboard": {
     "title": "儀表板",
@@ -202,10 +230,7 @@
     "searchName": "輸入名字",
     "searchevent": "輸入事件",
     "searchFirstName": "输入名字",
-    "searchLastName": "输入姓氏",
-    "people": "人",
-    "sort": "按角色搜索",
-    "actions": "操作"
+    "searchLastName": "输入姓氏"
   },
   "userListCard": {
     "joined": "加入",
@@ -260,41 +285,6 @@
     "eventCreated": "恭喜！事件已創建。",
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
   },
-  "organizationActionItems": {
-    "actionItemCategory": "行动项目类别",
-    "actionItemDetails": "行动项目详情",
-    "assignee": "受让人",
-    "assigner": "分配者",
-    "assignmentDate": "分配日期",
-    "active": "活跃",
-    "clearFilters": "清除筛选器",
-    "close": "关闭",
-    "completed": "已完成",
-    "completionDate": "完成日期",
-    "createActionItem": "创建",
-    "deleteActionItem": "删除行动项目",
-    "deleteActionItemMsg": "您是否要删除此行动项目？",
-    "details": "详情",
-    "dueDate": "到期日",
-    "earliest": "最早",
-    "editActionItem": "编辑行动项目",
-    "isCompleted": "已完成",
-    "latest": "最新",
-    "no": "否",
-    "noActionItems": "无行动项目",
-    "options": "选项",
-    "preCompletionNotes": "完成前的笔记",
-    "postCompletionNotes": "完成后的笔记",
-    "searchByName": "按名称搜索",
-    "selectActionItemCategory": "选择行动项目类别",
-    "selectAssignee": "选择受让人",
-    "status": "状态",
-    "successfulCreation": "行动项目创建成功",
-    "successfulUpdation": "行动项目更新成功",
-    "successfulDeletion": "行动项目删除成功",
-    "title": "行动项目",
-    "yes": "是"
-  },
   "eventListCard": {
     "location": "地點",
     "on": "上",
@@ -344,9 +334,7 @@
     "sortPost": "排序帖子",
     "tag": "您的浏览器不支持视频标签",
     "postCreatedSuccess": "恭喜！您已经发布了一些内容。",
-    "pinPost": "针柱",
-    "Next": "下一页",
-    "Previous": "上一页"
+    "pinPost": "针柱"
   },
   "postNotFound": {
     "post": "郵政",
@@ -633,9 +621,7 @@
     "createdOrganizations": "創建的組織",
     "search": "搜索",
     "nothingToShow": "這裡沒有什麼可展示的。",
-    "selectOrganization": "選擇組織",
-    "organizations": "组织",
-    "searchByName": "按名稱搜索"
+    "selectOrganization": "選擇組織"
   },
   "userSidebar": {
     "yourOrganizations": "您的組織",
@@ -685,6 +671,13 @@
     "nothingToShow": "這裡沒有什麼可顯示的。",
     "search": "搜索",
     "createEvent": "創建事件",
+    "eventTitle": "活動標題",
+    "eventDescription": "活動說明",
+    "eventLocation": "活動地點",
+    "startDate": "選擇開始日期",
+    "endDate": "選擇結束日期",
+    "publicEvent": "公共活動",
+    "registerable": "可註冊",
     "recurring": "再次發生的",
     "startTime": "開始時間",
     "endTime": "時間結束",
@@ -693,18 +686,7 @@
     "listView": "列表顯示",
     "calendarView": "日曆視圖",
     "allDay": "整天",
-    "eventCreated": "活动创建并发布成功。",
-    "eventDetails": "活动详情",
-    "eventTitle": "标题",
-    "enterTitle": "输入标题",
-    "eventDescription": "描述",
-    "enterDescription": "输入描述",
-    "eventLocation": "地点",
-    "enterLocation": "输入位置",
-    "startDate": "开始日期",
-    "endDate": "结束日期",
-    "publicEvent": "公开",
-    "registerable": "可注册"
+    "eventCreated": "活動已成功創建並發布。"
   },
   "userEventCard": {
     "location": "地點",
@@ -728,7 +710,6 @@
     "deleteAdvertisementMsg": "您是否要删除此广告？",
     "no": "不",
     "yes": "是",
-    "Rmedia": "提供要显示的媒体内容",
     "view": "查看",
     "edit": "编辑",
     "editAdvertisement": "编辑广告",
@@ -768,5 +749,8 @@
     "sameNameConflict": "请更改名称以进行更新",
     "categoryEnabled": "已启用措施项类别",
     "categoryDisabled": "措施项类别已禁用"
+  },
+  "errorMessages": {
+    "errorMessageDefult": "找不到用戶"
   }
 }
