--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -629,7 +629,7 @@
     "allOrganizations": "Toutes les organisations",
     "joinedOrganizations": "Organisations jointes",
     "createdOrganizations": "Organisations créées",
-    "search": "Recherche",
+    "search": "Rechercher des utilisateurs",
     "nothingToShow": "Rien à montrer ici.",
     "selectOrganization": "Sélectionnez une organisation",
     "filter": "Filtre",
