--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -631,7 +631,7 @@
     "allOrganizations": "सभी संगठन",
     "joinedOrganizations": "संगठन शामिल हुए",
     "createdOrganizations": "संगठन बनाये गये",
-    "search": "खोज",
+    "search": "खोज करें",
     "nothingToShow": "यहां दिखाने के लिए कुछ भी नहीं है.",
     "selectOrganization": "संगठन का चयन करें",
     "filter": "फिल्टर",
