--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -629,7 +629,7 @@
     "allOrganizations": "Todas las organizaciones",
     "joinedOrganizations": "Organizaciones unidas",
     "createdOrganizations": "Organizaciones creadas",
-    "search": "Buscar",
+    "search": "Buscar usuarios",
     "nothingToShow": "Nada que mostrar aquí.",
     "selectOrganization": "Seleccionar organización",
     "filter": "Filtrar",
